# trt_spconv

./: CMakeLists.txt  README.md
cuda/: sparse_conv_kernel.cu
include/: indice_pair.h  sparse_conv_tensor.h  sparse_convolution.h  spconv_plugin.h
src/: indice_pair.cpp  sparse_conv_tensor.cpp  sparse_convolution.cpp  spconv_plugin.cpp
